--- a/app/templates/graphes.html
+++ b/app/templates/graphes.html
@@ -3,7 +3,7 @@
 {% block title %}Outil d'aide à la prise de décision{% endblock %}
 
 {% block content %}
-    <div class="container" id="nouveauPatient">
+    <div class="container" id="graphes">
         <h2>Visualisations</h2>
         <img src="{{ url_for('static', filename='../static/images/courbes.png') }}" width="1050px" alt="Courbes">
 
