--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -415,3 +415,35 @@ input[type="file"] {
 #predire {
     width: auto;
 }
+
+/* Select */
+.form-control {
+    padding: 8px;
+    border-radius: 5px;
+    border: 2px solid #ccc; 
+    background-color: #f8f9fa; 
+    font-size: 16px;
+    color: #495057;
+}
+
+.form-control:hover {
+    border-color: #6e8094; 
+    background-color: #e9ecef; 
+}
+
+.lien {
+    color: #6e8094;
+}
+
+/* Visualisations */
+#graphes img {
+    display: block;
+    margin: 0 auto 30px;
+    max-width: 100%;
+    height: auto;
+    border-radius: 5px;
+}
+
+#graphes img:not(:last-child) {
+    margin-bottom: 20px;
+}
