--- a/app/templates/creer_compte.html
+++ b/app/templates/creer_compte.html
@@ -17,6 +17,10 @@
     <div id="containerConnexion">
         <form id="formulaire" action="/enregistrer_compte" method="POST">
             <div class="form-group">
+                <label for="emaill">Email :</label>
+                <input type="text" id="email" name="email" required>
+            </div>
+            <div class="form-group">
                 <label for="username">Nom d'utilisateur :</label>
                 <input type="text" id="username" name="username" required>
             </div>
