--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,7 +25,7 @@
                 <input type="password" id="password" name="password" required>
             </div>
             <button type="submit">Se connecter</button>
-            <p><a href="/creerCompte">Créer un compte</a></p>
+            <p><a class="lien" href="/creerCompte">Créer un compte</a></p>
         </form>
     </div>
 </body>
