--- a/app/templates/recherche_patients.html
+++ b/app/templates/recherche_patients.html
@@ -63,11 +63,11 @@
                             <!-- Icône pour consulter la fiche du patient -->
                             <a href="/view_patient/{{ patient.id_patient }}" title="Consulter">
                                 <i class="fas fa-eye" style="color: #697ab4;"></i>
-                            </a>
+                            </a>&nbsp;
                             <!-- Icône pour éditer la fiche du patient -->
                             <a href="/edit_patient/{{ patient.id_patient }}" title="Modifier">
                                 <i class="fas fa-edit" style="color: #7ead93;"></i>
-                            </a>
+                            </a>&nbsp;
                             <!-- Icône pour supprimer le patient et ses informations -->
                             <a href="/delete_patient/{{ patient.id_patient }}" title="Supprimer" onclick="return confirm('Voulez-vous vraiment supprimer ce patient ?');">
                                 <i class="fas fa-trash-alt" style="color: #ca3838;"></i>
